gitops/clusters/oci-a1/vote-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote-dev
  annotations:
    argocd.argoproj.io/sync-wave: '-40'
  labels:
    istio-injection: enabled
