gitops/clusters/oci-a1/vote-dev/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: vote-strict
  namespace: vote-dev
spec:
  mtls:
    mode: STRICT
