gitops/clusters/oci-a1/vote-dev/api-authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: vote-api-authz
  namespace: vote-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vote-server
  action: CUSTOM
  provider:
    name: vote-authz
  rules:
  - to:
    - operation:
        notPaths:
        - /liveness
        - /readiness
