gitops/clusters/oci-a1/vote-dev/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-api-ingress
  namespace: vote-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vote-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istio-ingress
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: vote-ui
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: vote-admin
    ports:
    - port: 3000
      protocol: TCP
